--- a/git/git.html
+++ b/git/git.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="header">
-        
+        <div class="slider">
+            <h5>slide one</h5>
+        </div>
     </div>
 </body>
 </html>
