--- a/git/git.html
+++ b/git/git.html
@@ -12,5 +12,6 @@
             <h5>slide one</h5>
         </div>
     </div>
+    <div class="footer"><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a></div>
 </body>
 </html>
