--- a/git/git.html
+++ b/git/git.html
@@ -10,6 +10,12 @@
     <div class="header">
         <div class="slider">
             <h5>slide one</h5>
+            <div class="header">
+                <div class="slider">
+                    <h5>slide one</h5>
+                </div>
+            </div>
+            <div class="footer"><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a></div>
         </div>
     </div>
     <div class="footer"><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a><a href="" id="hello"></a></div>
