--- a/git/git.html
+++ b/git/git.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="header">
+        <div class="hi">
+            my header 
+        </div>
         <div class="slider">
             <h5>slide one</h5>
             <div class="header">
