--- a/git/git.html
+++ b/git/git.html
@@ -13,7 +13,7 @@
         </div>
         <div class="slider">
             <h5>slide one</h5>
-            <div class="header">
+            <div class="header"
                 <div class="slider">
                     <h5>slide one</h5>
                 </div>
