--- a/codeyad/codeyad.html
+++ b/codeyad/codeyad.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/codeyad/codeyad.css">
     <script src="https://kit.fontawesome.com/7bfd795fb8.js" crossorigin="anonymous"></script>
     <title>codeyad</title>
-
+<link rel="stylesheet" href="hfj.css">
 </head>
 
 <body>
